--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <h1 class="mb-3">Hello Everyone!</h1>
 
             <p class="lead mb-4">
-                My name is Bill Simms, and I am currently a senior attending Kent State University. I am majoring in Applied Mathematics with a double concentration in Probability & Statistics and Financial Mathematics, as well as a minor in Computer Science and Digital Media Production. When it comes to my hobbies, I like looking into mathematical research, creating fun videos with friends, and solving Rubik's cubes.
+                My name is Anthony Artino, and I am currently a senior attending Kent State University. I am majoring in Applied Mathematics with a double concentration in Probability & Statistics and Financial Mathematics, as well as a minor in Computer Science and Digital Media Production. When it comes to my hobbies, I like looking into mathematical research, creating fun videos with friends, and solving Rubik's cubes.
             </p>
 
             <div>
@@ -1386,3 +1386,4 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
