--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <!-- Left Box (Image) -->
         <div class="home-box left-box">
-            <img src="C:\Users\anthp\Downloads\IMG_20230204_150030_461.jpg" alt="Portfolio Image">
+            <img src="IMG_20230204_150030_461.jpg" alt="Portfolio Image">
         </div>
 
         <!-- Right Box (Text) -->
@@ -1386,4 +1386,5 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
