--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         <!-- Image -->
         <div style="flex: 1; min-width: 250px; max-width: 350px; display: flex; justify-content: center; align-items: center;
                     border-radius: 20px; overflow: hidden; box-shadow: 0 15px 30px rgba(0,0,0,0.5); background: rgba(255,255,255,0.05);">
-            <img src="C:\Users\anthp\Downloads\A_Arti_F25.jpg" alt="Anthony Artino" style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
+            <img src="A_Arti_F25.jpg" alt="Anthony Artino" style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
         </div>
 
     </div>
@@ -631,21 +631,21 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Diving into the Depths</h5>
                         <p class="card-text">Scuba diving dynamics with MATLAB.</p>
-                        <a href="C:\Users\anthp\OneDrive\Documents\Kent State\Jupyterlab and TeX documents\ScubaDivingProject.pdf" class="btn btn-view" target="_blank">View</a>
+                        <a href="Diving into the Depths Project #1.pdf" class="btn btn-view" target="_blank">View</a>
                     </div>
                 </div>
                 <div class="palette-card" style="top:100px; left:200px; background: linear-gradient(145deg, #00e676, #1de9b6);">
                     <div class="card-body text-center">
                         <h5 class="card-title">Ant Behavior Simulation</h5>
                         <p class="card-text">Simulated ant foraging using Python.</p>
-                        <a href="file:///C:/Users/anthp/OneDrive/Documents/Kent%20State/Jupyterlab%20and%20TeX%20documents/Ant%20Movements.pdf" class="btn btn-view" target="_blank">View</a>
+                        <a href="Ant Movements.pdf" class="btn btn-view" target="_blank">View</a>
                     </div>
                 </div>
                 <div class="palette-card" style="top:180px; left:350px; background: linear-gradient(145deg, #2979ff, #536dfe);">
                     <div class="card-body text-center">
                         <h5 class="card-title">Cellular Automaton</h5>
                         <p class="card-text">Open-field animal foraging simulation in Python.</p>
-                        <a href="C:\Users\anthp\Downloads\Cellular Automation Simulation of Open-Field Foraging with Area-Restricted Search.pdf" class="btn btn-view" target="_blank">View</a>
+                        <a href="Cellular Automation Simulation of Open-Field Foraging with Area-Restricted Search.pdf" class="btn btn-view" target="_blank">View</a>
                     </div>
                 </div>
                 <div class="palette-card" style="top:60px; left:500px; background: linear-gradient(145deg, #d500f9, #ea80fc);">
@@ -659,14 +659,14 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Grammys.com Analysis</h5>
                         <p class="card-text">Evaluated user engagement metrics and visualized traffic spikes.</p>
-                        <a href="C:\Users\anthp\Pictures\Screenshots\Screenshot 2025-08-07 131500.png" class="btn btn-view" target="_blank">View</a>
+                        <a href="Screenshot 2025-08-07 131500.png" class="btn btn-view" target="_blank">View</a>
                     </div>
                 </div>
                 <div class="palette-card" style="top:120px; left:800px; background: linear-gradient(145deg, #00bfa5, #00e5ff);">
                     <div class="card-body text-center">
                         <h5 class="card-title">Intel Data Center</h5>
                         <p class="card-text">Interactive dashboards for energy data analysis.</p>
-                        <a href="C:\Users\anthp\Pictures\Screenshots\Screenshot 2025-08-07 135553.png" class="btn btn-view" target="_blank">View</a>
+                        <a href="Screenshot 2025-08-07 135553.png" class="btn btn-view" target="_blank">View</a>
                     </div>
                 </div>
             </div>
@@ -1386,5 +1386,6 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
