--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Diving into the Depths</h5>
                         <p class="card-text">Scuba diving dynamics with MATLAB.</p>
-                        <a href="Diving into the Depths Project #1.pdf" class="btn btn-view" target="_blank">View</a>
+                        <iframe src="Diving into the Depths Project #1.pdf" class="btn btn-view" target="_blank">View</iframe>
                     </div>
                 </div>
                 <div class="palette-card" style="top:100px; left:200px; background: linear-gradient(145deg, #00e676, #1de9b6);">
@@ -1386,6 +1386,7 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
 
