--- a/index.html
+++ b/index.html
@@ -1067,9 +1067,9 @@ animateLetterColors();
       <div class="col-md-5 mb-4 mb-md-0">
         <div class="phone-card">
           <h4 class="mb-4 text-center" style="font-weight: 600;">Contact Details</h4>
-          <p><i class="bi bi-telephone-fill contact-icon contact-icon-phone"></i> <strong>Phone:</strong> +1 (555) 123-4567</p>
-          <p><i class="bi bi-envelope-fill contact-icon contact-icon-email"></i> <strong>Email:</strong> aw3@gamil.edu</p> 
-          <p><i class="bi bi-linkedin contact-icon contact-icon-linkedin"></i> <strong>LinkedIn:</strong> <a href="#" class="contact-link" target="_blank">linkedin.com/in/yourprofile</a></p>
+          <p><i class="bi bi-telephone-fill contact-icon contact-icon-phone"></i> <strong>Phone:</strong> +1 (330) 998-1762</p>
+          <p><i class="bi bi-envelope-fill contact-icon contact-icon-email"></i> <strong>Email:</strong> aartino3@kent.edu</p> 
+          <p><i class="bi bi-linkedin contact-icon contact-icon-linkedin"></i> <strong>LinkedIn:</strong> <a href="#" class="contact-link" target="_blank">https://www.linkedin.com/in/anthony-artino-02584a321/</a></p>
         </div>
       </div>
 
@@ -1386,6 +1386,7 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
 
