--- a/index.html
+++ b/index.html
@@ -701,11 +701,9 @@
 /* SCALE PALETTE FOR TABLETS/PHONES */
 @media only screen and (max-width: 768px) {
     .palette-container {
-        transform: scale(0.6) translateX(-50%);
-    	transform-origin: top center;
-    	position: relative;
-   	 	left: 50%;
-    	margin-left: 0;
+        transform: scale(0.6);
+        transform-origin: top center;
+        margin-left: -260px; /* move more left */
     }
 }
 
@@ -1394,6 +1392,7 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
 
