--- a/index.html
+++ b/index.html
@@ -699,11 +699,12 @@
 }
 
 /* SCALE PALETTE FOR TABLETS/PHONES */
-@media only screen and (max-width: 444px) {
+@media only screen and (max-width: 414px) {
     .palette-container {
-        transform: scale(0.5);
-        transform-origin: top center;
-        margin-left: -190px; /* move more left */
+        transform: scale(0.35); /* shrink more to fit small screens */
+    	transform-origin: top center;
+    	margin-left: -80px; /* recenter after scaling */
+    	max-width: 100vw; /* ensure it fits within the viewport */
     }
 }
 
@@ -1392,6 +1393,7 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
 
