--- a/index.html
+++ b/index.html
@@ -702,9 +702,9 @@
 @media only screen and (max-width: 414px) {
     .palette-container {
         transform: scale(0.35); /* shrink more to fit small screens */
-    	transform-origin: top center;
-    	margin-left: -80px; /* recenter after scaling */
-    	max-width: 100vw; /* ensure it fits within the viewport */
+    	transform-origin: top left;    /* scale from top-left corner instead of center */
+        margin-left: 0;                /* no positive margin pushing it right */
+        max-width: none;               /* allow full width */
     }
 }
 
@@ -1393,6 +1393,7 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
 
