--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
     .palette-container {
         transform: scale(0.6);
         transform-origin: top center;
-        margin-left: -120px; /* move more left */
+        margin-left: -180px; /* move more left */
     }
 }
 
@@ -711,6 +711,7 @@
     .palette-container {
         transform: scale(0.45);
         transform-origin: top center;
+		margin-left: -100px; /* push left for phones so everything is visible */
     }
 }
 
@@ -1406,6 +1407,7 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
 
