--- a/index.html
+++ b/index.html
@@ -701,9 +701,9 @@
 /* SCALE PALETTE FOR TABLETS/PHONES */
 @media only screen and (max-width: 768px) {
     .palette-container {
-        transform: scale(0.6);
+        transform: scale(0.45);
         transform-origin: top center;
-        margin-left: -170px; /* move more left */
+        margin-left: -210px; /* move more left */
 
     }
 }
@@ -1043,16 +1043,18 @@ animateLetterColors();
 
     #contact h2 { margin-top: 80px; color: white; text-shadow: 0 0 10px rgba(0,0,0,0.5); }
 
-	@media (max-width: 480px) { /* phones */
-  #contact-phone-title .phone-bg {
-    width: 320px;    /* slightly smaller container */
-    height: 160px;
+	/* Mobile adjustments */
+   @media (max-width: 576px) {
+   .phone-screen {
+    flex-wrap: nowrap;        /* prevent letters from wrapping */
+    justify-content: center;  /* center the whole word */
+    gap: 8px;                 /* reduce spacing a bit */
   }
 
-  #contact-phone-title .phone-screen span {
-    width: 36px;     /* smaller “app” letters */
-    height: 36px;
-    font-size: 1.6rem;
+  .phone-screen span {
+    width: 40px;              /* slightly smaller letters */
+    height: 40px;
+    font-size: 1.6rem;        /* smaller font for mobile */
   }
 }
   
@@ -1407,6 +1409,7 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
 
