--- a/index.html
+++ b/index.html
@@ -699,11 +699,11 @@
 }
 
 /* SCALE PALETTE FOR TABLETS/PHONES */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 414px) {
     .palette-container {
         transform: scale(0.40);
         transform-origin: top center;
-        margin-left: -230px; /* move more left */
+        margin-left: -235px; /* move more left */
 
     }
 }
@@ -1048,13 +1048,19 @@ animateLetterColors();
    .phone-screen {
     flex-wrap: nowrap;        /* prevent letters from wrapping */
     justify-content: center;  /* center the whole word */
-    gap: 10px;                 /* reduce spacing a bit */
+    gap: 8px;                 /* reduce spacing a bit */
   }
 
   .phone-screen span {
     width: 40px;              /* slightly smaller letters */
-    height: 42px;
+    height: 40px;
     font-size: 1.6rem;        /* smaller font for mobile */
+  }
+
+  /* Force ME to next row */
+  .phone-screen span:nth-child(8),
+  .phone-screen span:nth-child(9) {
+   flex-basis: 100%;          /* push ME letters to next row */
   }
 }
   
@@ -1409,6 +1415,7 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
 
