--- a/index.html
+++ b/index.html
@@ -648,6 +648,12 @@
         font-size: 0.75rem;
     }
 
+	/* Reduce font size for lists inside cards */
+    .card-content ul li {
+        font-size: 0.7rem; /* slightly smaller than paragraphs */
+        line-height: 1.4;  /* keep spacing readable */
+    }
+
     /* Floating background formulas smaller on phones */
     .edu-bg span.formula {
         font-size: 1.2rem;
@@ -1479,6 +1485,7 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
 
