--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@ animateLetterColors();
 
   /* Manually adjust M inside its box */
   .phone-screen span:nth-last-child(2) {
-    transform: translateX(14px); /* move M slightly left */
+    transform: translateX(-14px); /* move M slightly left */
 }
 
   
@@ -1144,7 +1144,7 @@ animateLetterColors();
         <span>A</span>
         <span>C</span>
         <span>T</span>
-        <span>M</span>
+		<span><span class="letter">M</span></span>
         <span>E</span>
       </div>
     </div>
@@ -1482,6 +1482,7 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
 
