--- a/index.html
+++ b/index.html
@@ -1104,11 +1104,11 @@ animateLetterColors();
     #contact h2 { margin-top: 80px; color: white; text-shadow: 0 0 10px rgba(0,0,0,0.5); }
 
 /* Mobile adjustments */
-@media (max-width: 414px) {
+@media (max-width: 576px) {
   .phone-screen {
     flex-wrap: wrap;          
     justify-content: center;  
-    gap: 10px;
+    gap: 8px;
   }
 
   .phone-screen span {
@@ -1119,6 +1119,13 @@ animateLetterColors();
   .phone-screen span:nth-last-child(2)::before {
     content: "";
     flex-basis: 100%;
+  }
+
+  /* Optional: small adjustment to spacing between M and E */
+  .phone-screen span:nth-last-child(2),
+  .phone-screen span:nth-last-child(1) {
+    margin-left: 4px;        /* nudges M slightly for perfect centering */
+    margin-right: 4px;       /* optional, keeps E aligned nicely */
   }
 }
 
@@ -1474,6 +1481,7 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
 
