--- a/index.html
+++ b/index.html
@@ -1115,17 +1115,17 @@ animateLetterColors();
   display: grid;             /* use grid instead of flex */
   place-items: center;       /* centers both horizontally & vertically */
   }
- /* Push last two letters (M and E) to next row */
-  .phone-screen span:nth-last-child(2)::before {
-    content: "";
-    flex-basis: 100%;
+ /* Force M and E to the next row as a group */
+  .phone-screen .me-group {
+    display: flex;
+    gap: 8px;                 /* space between M and E */
+    width: auto;              /* don’t stretch the boxes */
+    justify-content: center;
   }
 
-  /* Optional: small adjustment to spacing between M and E */
-  .phone-screen span:nth-last-child(2),
-  .phone-screen span:nth-last-child(1) {
-    margin-left: 4px;        /* nudges M slightly for perfect centering */
-    margin-right: 4px;       /* optional, keeps E aligned nicely */
+  .phone-screen .me-group span {
+    width: 40px;              /* same as other letters */
+    height: 40px;
   }
 }
 
@@ -1481,6 +1481,7 @@ function getFeedback(score){
 </script>
 </body>
 </html>
+
 
 
 
